# vscode-cedar

./: .dockerignore  .gitignore  .prettierignore  .vscode-test.js  .vscodeignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  README.md  development.md  eslint.config.mjs  language-configuration.json  package-lock.json  package.json  snippets.json  tsconfig.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: build_and_test.yml
schemas/: README.md  cedarauth.schema.json  cedarentities.schema.json  cedarschema.schema.json  cedartemplatelinks.schema.json
src/: about.ts  cedarschema.d.ts  codelens.ts  commands.ts  completion.ts  completionjson.ts  definition.ts  diagnostics.ts  documentsymbols.ts  extension.ts  fileutil.ts  format.ts  generate.ts  help.ts  hover.ts  parser.ts  policy.ts  provider.ts  quickfix.ts  regex.ts  semantictokens.ts  signaturehelp.ts  validate.ts
src/test/suite/: cedar-wasm.test.ts  competion.test.ts  completion.test.ts  completionjson.test.ts  extension.test.ts  validation.test.ts
syntaxes/: cedar.tmLanguage.json  cedarschema.tmLanguage.json  codeblock.json
testdata/RFC48/: cedarschema  cedarschema.json
testdata/RFC53/: cedarschema  cedarschema.json  policies.cedar
testdata/RFC82/: cedarentities.json  cedarschema  cedarschema.json  policies.cedar
testdata/actionparse/: cedarschema
testdata/atline/: cedarschema.json
testdata/attributes/: cedarschema.json  test.cedar
testdata/context/: cedarschema.json  commonTypes.cedar
testdata/datatypes/: cedarschema  policies.cedar
testdata/entityattr/: cedarschema.json  exist.cedarentities.json  expected.cedarentities.json  expected2.cedarentities.json  mismatch.cedarentities.json  mismatchentity.cedarentities.json  missingattrs.cedarentities.json  missingparents.cedarentities.json
testdata/entitytype/: cedarschema.json  missingnamespace.cedarentities.json  notallowedparent.cedarentities.json
testdata/impossible/: cedarschema.json  policy.cedar
testdata/narrow/: cedarschema.json  policies.cedar
testdata/notfound/: policy.cedar
testdata/parse/: commontype.cedarschema.json  entitytype.cedarschema.json  namespace.cedarschema.json
testdata/policyid/: cdk.cedar  cedarentities.json  duplicate.cedar  inferred.cedar  mixed.cedar  run.sh  unique.cedar
testdata/reserved/: __cedar.cedarschema  set.cedarschema
testdata/shadow/: Demo.cedarschema
testdata/triple/: cedarschema.json  entities.cedar
testdata/undeclared/: actions.cedarschema.json  commontype.cedarschema  commontype.cedarschema.json  entitytype.cedarschema  entitytype.cedarschema.json
testdata/unrecognized/: policy.cedar
vscode-cedar-wasm/: Cargo.toml  build.rs
vscode-cedar-wasm/src/: entities_validator.rs  format.rs  lib.rs  policy.rs  policy_validator.rs  schema_translate.rs  schema_validator.rs  syntax_validator.rs  utils.rs  validate_message.rs
vscode-cedar-wasm/tests/: node.rs
