[package]
name = "vscode-cedar-wasm"
version = "0.7.1"
edition = "2021"
description = "WASM bindgen bindings for cedar-policy 3.0.1"
license-file = "LICENSE"
homepage = "https://cedarpolicy.com"
repository = "https://github.com/cedar-policy/vscode-cedar"

exclude = ['/build', '/Config', '/build-tools/']

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = "0.2.86"
web-sys = { version = "0.3.63", features = ['console'] }
js-sys = "0.3.63"
serde = "1.0.163"
serde_json = "1.0.96"

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.6", optional = true }

# cedar
cedar-policy = { version = "=3.0.1" }
cedar-policy-core = { version = "=3.0.1" }
cedar-policy-formatter = { version = "=3.0.1" }
cedar-policy-validator = { version = "=3.0.1" }
miette = "5.10.0"

[dev-dependencies]
wasm-bindgen-test = "0.3.36"

[build-dependencies]
cargo-lock = "8.0.2"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
